vlib/v/checker/tests/compile_error.vv
module main

$if !serenity {
    $compile_error('Only Serenity is supported')
}

$if !vinix {
    $compile_warn('On non Vinix this warning should be shown')
}

fn main() {
	println('Hello from Serenity')
}
	
	
